# convert

./: Anchor.toml  package-lock.json  package.json
app/: package-lock.json  package.json
app/app/: constants.ts  root.tsx
app/app/components/: CopyAddress.tsx  CreateConverter.tsx  ImageUpload.tsx  NftSelector.tsx  Popover.tsx  Providers.tsx  Title.tsx  WalletButton.tsx
app/app/context/: TxProvider.tsx  convert.tsx  digital-assets.tsx  txs.tsx  umi.tsx
app/app/helpers/: clone-collection.ts  convert.server.ts  helius.server.ts  index.ts  pdas.ts  umi.ts
app/app/idl/: convert.json
app/app/routes/: $slug._index.tsx  $slug.admin.tsx  $slug.tsx  _index.tsx  (+6 more)
app/public/: fetch-assets.worker.js
programs/convert/: Cargo.toml
programs/convert/src/: lib.rs  utils.rsxx
programs/convert/src/instructions/: approve.rs  close_converter.rs  close_core_converter.rs  close_nifty_converter.rs  convert.rs  convert_core.rs  convert_nifty.rs  delete_converter.rs  init.rs  init_core.rs  init_nifty.rs  init_program_config.rs  init_unapproved.rs  mod.rs  toggle_active.rs  toggle_approved.rs  toggle_free_mode.rs  update_convert_fee.rs  update_converter.rs
programs/convert/src/state/: converter.rs  mod.rs  program_config.rs
tests/: collection.ts  convert.ts  creator.ts  existing-collection.ts  helper.ts  non-ua.ts
tests/core/: collection.ts  pnft-to-core.ts  test-cleanup.ts
tests/helpers/: create-collection.ts  create-nft.ts  instructions.ts  pdas.ts  umi.ts  utils.ts
tests/nifty/: happy-path.ts
tests/pnfts/: collection.ts  creator.ts  existing-collection.ts  non-ua.ts
(+2 files in other folders)
