[package]
name = "convert"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "convert"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.29.0", features = ["metadata"]}
mpl-candy-machine-core = {version = "3.0.1", features = ["no-entrypoint"]}
mpl-core = "0.4.1"
nifty-asset = "0.3.0"
ahash = "=0.8.4"
proc-macro-regex = "1.1.0"
solana-program = "*"